apps/mechupa/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mechupa
    backstage.io/kubernetes-id: mechupa
    istio-injection: enabled
  name: mechupa
spec:
  finalizers:
  - kubernetes
