apps/mechupa/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mechupa-vsvc
  namespace: mechupa
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - mechupa.diegoluisi.eti.br
  http:
  - name: primary
    route:
    - destination:
        host: mechupa-stable-svc
      weight: 100
    - destination:
        host: mechupa-canary-svc
      weight: 0
